<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/largeMargin">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back_arrow"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp_text"
            android:layout_marginTop="@dimen/largeMargin"
            android:textSize="@dimen/appTitleTextsize"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppinsextrabold"/>

        <TextView
            android:id="@+id/email_id_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeMargin"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/otp_sent_hint"/>

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeMargin"
            android:textColor="@color/colorRed"
            android:fontFamily="@font/poppinsregular"
            android:visibility="gone"
            tools:text="* One Time Password (OTP) has been sent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpTextLayout"
            style="@style/TextInputTypeOverride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otp_text"
                android:paddingStart="@dimen/largeMargin"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/resend_otp_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeMargin"
            android:text="@string/resend_otp_textview"
            android:fontFamily="@font/poppinsregular"
            android:padding="@dimen/mediumMargin"
            android:background="@drawable/custom_gold_border"
            android:textColor="@color/colorAccent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordLayout"
            style="@style/TextInputTypeOverride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xextraLargeMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_text"
                android:inputType="textPassword"
                android:paddingStart="@dimen/largeMargin"

                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            style="@style/TextInputTypeOverride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:paddingStart="@dimen/largeMargin"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/change_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_text"
            android:background="@color/darkBlack"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="@dimen/largeMargin"
            android:layout_marginTop="@dimen/largeMargin"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>