<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usermodule.view.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/goBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsextrabold"
        android:lines="2"
        android:text="@string/forgotPasswordTitle"
        android:textAllCaps="true"
        android:textColor="@color/darkBlack"
        android:textSize="@dimen/appTitleTextsize"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <TextView
        android:id="@+id/hint_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintEnd_toEndOf="@id/guideline11"
        android:layout_marginTop="@dimen/semiSmallMargin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/password_reset_hint"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEmailLayout"
        style="@style/TextInputTypeOverride"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="40dp"
        app:layout_constraintEnd_toEndOf="@id/guideline11"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline4">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_text"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/smallMargin"
            android:paddingLeft="@dimen/smallMargin" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkBlack"
        android:fontFamily="@font/poppinsmedium"
        android:padding="@dimen/largeMargin"
        android:text="@string/sendPassword"
        android:textColor="@color/textLightColor"
        app:layout_constraintEnd_toEndOf="@id/guideline11"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

</androidx.constraintlayout.widget.ConstraintLayout>